--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="references">
             <h4>Supports de cours :</h4>
             <ul>
-                <li><a href="Introduction à UML.pdf" ></a>Introduction à UML (PDF)</li>
+                <li><a href="Introduction à UML.pdf">Introduction à UML (PDF)</a></li>
             </ul>
             
             <h4>Enregistrements vidéo :</h4>
