changement Index.html pour inclusion UML2

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 				<section>
 					<h3 style="font-size: 0.6em;">Supports de cours</h2>
 					<ul style="font-size: 0.5em;">
+						<li><a href="./IntroductionUML.html">Introduction UML</a></li>
 						<li><a href="./SemanticEnterprise.html">L'entreprise sémantique</a></li>
 					</ul>
 				</section>
