homonymie.png corrected

--- a/SemanticEnterprise.html
+++ b/SemanticEnterprise.html
@@ -118,7 +118,7 @@
 				</section>
 				<section>
 					<p>Le même terme (symbole) mais pas le même concept?</p>
-					<img src="./img/Homonymie.png" alt="Homonymie" style="max-width: 100%; height: auto;" />
+					<img src="./img/homonymie.png" alt="Homonymie" style="max-width: 100%; height: auto;" />
 				</section>
 				<section>
 					<p>Triangle Sémiotique et pragmatique</p>
