ajout slide rhétorique

--- a/SemanticEnterprise.html
+++ b/SemanticEnterprise.html
@@ -126,6 +126,11 @@
 						style="max-width: 50%; height: auto;" />
 				</section>
 				<section>
+					<p>Triangle Sémiotique et Rhétorique</p>
+					<img src="./img/triangleSemantiqueRhetorique.png" alt="Triangle Sémiotique et pragmatique"
+						style="max-width: 50%; height: auto;" />
+				</section>				
+				<section>
 					<p>Triangle Sémiotique, rhétorique et communication directe</p>
 					<img src="./img/TriangleSemantiqueCommucationDirecte.png"
 						alt="Triangle Sémiotique, rhétorique et communication directe"
