ajout slides categorisation classification multidisciplines

--- a/SemanticEnterprise.html
+++ b/SemanticEnterprise.html
@@ -129,15 +129,15 @@
 					<p>Triangle Sémiotique et Rhétorique</p>
 					<img src="./img/triangleSemantiqueRhetorique.png" alt="Triangle Sémiotique et pragmatique"
 						style="max-width: 50%; height: auto;" />
-				</section>				
+				</section>
 				<section>
-					<p>Triangle Sémiotique, rhétorique et communication directe</p>
+					<p style="font-size: 0.6em;">Triangle Sémiotique, rhétorique et communication directe</p>
 					<img src="./img/TriangleSemantiqueCommucationDirecte.png"
 						alt="Triangle Sémiotique, rhétorique et communication directe"
 						style="max-width: 50%; height: auto;" />
 				</section>
 				<section>
-					<p>Triangle Sémiotique, rhétorique et communication indirecte</p>
+					<p style="font-size: 0.6em;">Triangle Sémiotique, rhétorique et communication indirecte</p>
 					<img src="./img/triangleSemantiquecommunicationIndirecte.png"
 						alt="Triangle Sémiotique, rhétorique et communication indirecte"
 						style="max-width: 50%; height: auto;" />
@@ -168,7 +168,7 @@
 					</p>
 				</section>
 				<section>
-					<h3 style="font-size: 0.6em;">Impact de l’usage du numériquel</h3>
+					<h3 style="font-size: 0.6em;">Impact de l’usage du numérique</h3>
 					<p style="font-size: 0.5em;">
 						L'usage du numérique renforce la communication indirecte en raison des limitations imposées par
 						l'absence de signaux non verbaux et par la nature asynchrone des échanges.
@@ -209,28 +209,49 @@
 						style="max-width: 50%; height: auto;" />
 				</section>
 				<section>
-					<p style="font-size: 0.4em;">Les termes "catégorisation" et "classification" sont souvent utilisés de manière interchangeable,
+					<p style="font-size: 0.4em;">Les termes "catégorisation" et "classification" sont souvent utilisés
+						de manière interchangeable,
 						mais ils ont des significations distinctes, notamment dans des contextes spécifiques tels que la
 						linguistique, la philosophie et la science de l'information.</p>
-						<img src="./img/CategorisationClassification2.png" alt="Catégorisation et Classification"
+					<img src="./img/CategorisationClassification2.png" alt="Catégorisation et Classification"
 						style="max-width: 40%; height: auto;" />
-						<p style="font-size: 0.4em;">Catégorisation: Processus de regroupement d'entités en fonction de caractéristiques partagées ou de similitudes conceptuelles.</p>						
-						<p style="font-size: 0.4em;">Classification: Organisation systématique d'éléments en groupes hiérarchiques prédéfinis basés sur des critères.</p>						
-	
-					</section>
-					<section>
-						<p style="font-size: 0.5em;">Lien catégorisation et triangle sémantique.</p>
-							<img src="./img/CategorisationTriangle.png" alt="Catégorisation et triangle"
-							style="max-width: 40%; height: auto;" />
-							<p style="font-size: 0.4em;">La catégorisation opère principalement entre concepts et référents.<br><br>Elle nous aide à organiser le monde en catégories mentales compréhensibles basées sur nos expériences avec des objets réels.<br><br> Par exemple, en rencontrant un chien, nous le catégorisons mentalement en fonction des traits qu'il partage avec d'autres chiens.</p>								
-						</section>					
-						<section>
-							<p style="font-size: 0.5em;">Lien classification et triangle sémantique.</p>
-								<img src="./img/triangleClassification.png" alt="Triangle et Classification"
-								style="max-width: 40%; height: auto;" />
-								<p style="font-size: 0.4em;">La classification est donc un processus plus rigide et structuré que la catégorisation.<br><br> Elle formalise la façon dont les objets (référents) sont regroupés en concepts et garantit que ces regroupements suivent des critères spécifiques, souvent basés sur une base scientifique ou logique. <br><br>Cela est particulièrement important dans des domaines comme la biologie, où le système de classification est bien défini et globalement compris.</p>								
-							</section>	
-					</section>
+					<p style="font-size: 0.4em;">Catégorisation: Processus de regroupement d'entités en fonction de
+						caractéristiques partagées ou de similitudes conceptuelles.</p>
+					<p style="font-size: 0.4em;">Classification: Organisation systématique d'éléments en groupes
+						hiérarchiques prédéfinis basés sur des critères.</p>
+
+				</section>
+				<section>
+					<p style="font-size: 0.5em;">Lien catégorisation et triangle sémantique.</p>
+					<img src="./img/CategorisationTriangle.png" alt="Catégorisation et triangle"
+						style="max-width: 40%; height: auto;" />
+					<p style="font-size: 0.4em;">La catégorisation opère principalement entre concepts et
+						référents.<br><br>Elle nous aide à organiser le monde en catégories mentales compréhensibles
+						basées sur nos expériences avec des objets réels.<br><br> Par exemple, en rencontrant un chien,
+						nous le catégorisons mentalement en fonction des traits qu'il partage avec d'autres chiens.</p>
+				</section>
+				<section>
+					<p style="font-size: 0.5em;">Lien classification et triangle sémantique.</p>
+					<img src="./img/triangleClassification.png" alt="Triangle et Classification"
+						style="max-width: 40%; height: auto;" />
+					<p style="font-size: 0.4em;">La classification est donc un processus plus rigide et structuré que la
+						catégorisation.<br><br> Elle formalise la façon dont les objets (référents) sont regroupés en
+						concepts et garantit que ces regroupements suivent des critères spécifiques, souvent basés sur
+						une base scientifique ou logique. <br><br>Cela est particulièrement important dans des domaines
+						comme la biologie, où le système de classification est bien défini et globalement compris.</p>
+				</section>
+				<section>
+					<p style="font-size: 0.5em;">Interaction avec le Monde Ouvert et les Contextes Interdisciplinaires</p>
+					<img src="./img/CategorisationClassificationDisciplines.png" alt="Triangle et Classification"
+						style="max-width: 40%; height: auto;" />
+					<p style="font-size: 0.4em;">Lorsqu'on considère des scénarios de monde ouvert (comme la combinaison de plusieurs disciplines ou systèmes de connaissances),<br>le triangle sémantique devient un outil utile pour comprendre comment la classification et la catégorisation pourraient différer ou s'aligner en fonction des domaines ou des disciplines.</p>
+				</section>
+				<p style="font-size: 0.5em;">Interaction avec le Monde Ouvert et les Contextes Interdisciplinaires<br>Exemple</p>
+				<img src="./img/CategorisationClassificationDisciplineExemple.png" alt="Triangle et Classification"
+					style="max-width: 40%; height: auto;" />
+				<p style="font-size: 0.4em;">Le chien vue par un biologiste ou un professionel de la santé considérant le chien comme animal de compagnie?</p>
+			</section>
+			</section>
 			<section>
 				<h2>Intégrer la philosophie de l'action et le pragmatisme</h2>
 			</section>
