ajout slides categorisation classifications

--- a/SemanticEnterprise.html
+++ b/SemanticEnterprise.html
@@ -223,7 +223,7 @@
 				</section>
 				<section>
 					<p style="font-size: 0.5em;">Lien catégorisation et triangle sémantique.</p>
-					<img src="./img/CategorisationTriangle.png" alt="Catégorisation et triangle"
+					<img src="./img/CategorisationTriangle.png" alt="Catégorisation et triangle sémantique"
 						style="max-width: 40%; height: auto;" />
 					<p style="font-size: 0.4em;">La catégorisation opère principalement entre concepts et
 						référents.<br><br>Elle nous aide à organiser le monde en catégories mentales compréhensibles
@@ -232,7 +232,7 @@
 				</section>
 				<section>
 					<p style="font-size: 0.5em;">Lien classification et triangle sémantique.</p>
-					<img src="./img/triangleClassification.png" alt="Triangle et Classification"
+					<img src="./img/triangleClassification.png" alt="Classification et triangle sémantique"
 						style="max-width: 40%; height: auto;" />
 					<p style="font-size: 0.4em;">La classification est donc un processus plus rigide et structuré que la
 						catégorisation.<br><br> Elle formalise la façon dont les objets (référents) sont regroupés en
@@ -241,16 +241,96 @@
 						comme la biologie, où le système de classification est bien défini et globalement compris.</p>
 				</section>
 				<section>
-					<p style="font-size: 0.5em;">Interaction avec le Monde Ouvert et les Contextes Interdisciplinaires</p>
-					<img src="./img/CategorisationClassificationDisciplines.png" alt="Triangle et Classification"
-						style="max-width: 40%; height: auto;" />
-					<p style="font-size: 0.4em;">Lorsqu'on considère des scénarios de monde ouvert (comme la combinaison de plusieurs disciplines ou systèmes de connaissances),<br>le triangle sémantique devient un outil utile pour comprendre comment la classification et la catégorisation pourraient différer ou s'aligner en fonction des domaines ou des disciplines.</p>
+					<p style="font-size: 0.5em;">Interaction avec le Monde Ouvert et les Contextes Interdisciplinaires
+					</p>
+					<img src="./img/CategorisationClassificationDisciplines.png"
+						alt="Monde ouvert et contextes interdisciplinaires" style="max-width: 40%; height: auto;" />
+					<p style="font-size: 0.4em;">Lorsqu'on considère des scénarios de monde ouvert (comme la combinaison
+						de plusieurs disciplines ou systèmes de connaissances),<br>le triangle sémantique devient un
+						outil utile pour comprendre comment la classification et la catégorisation pourraient différer
+						ou s'aligner en fonction des domaines ou des disciplines.</p>
 				</section>
-				<p style="font-size: 0.5em;">Interaction avec le Monde Ouvert et les Contextes Interdisciplinaires<br>Exemple</p>
-				<img src="./img/CategorisationClassificationDisciplineExemple.png" alt="Triangle et Classification"
-					style="max-width: 40%; height: auto;" />
-				<p style="font-size: 0.4em;">Le chien vue par un biologiste ou un professionel de la santé considérant le chien comme animal de compagnie?</p>
-			</section>
+				<section>
+					<p style="font-size: 0.5em;">Interaction avec le Monde Ouvert et les Contextes
+						Interdisciplinaires<br>Exemple</p>
+					<img src="./img/CategorisationClassificationDisciplineExemple.png"
+						alt="Un chien vu par un biologiste ou un professionel de la santé"
+						style="max-width: 40%; height: auto;" />
+					<p style="font-size: 0.4em;">Un chien est il vu de la même manière par un biologiste et par un
+						professionel de la santé le considérant comme animal de compagnie?</p>
+				</section>
+				<section>
+					<p style="font-size: 0.8em;">Conclusion: une perspective combinée</p>
+					<p style="font-size: 0.5em;">Le triangle sémantique aide à illustrer comment la classification et la
+						catégorisation fonctionnent en reliant des symboles, des concepts et des référents. </p>
+					<ul style="font-size: 0.5em;">
+						<li>Classification: relation entre concepts et référents formalisée et structurée, symboles
+							représentant des concepts standardisés et bien définis.</li>
+						<li>Catégorisation: relation plus flexible et basée sur des caractéristiques partagées qui
+							peuvent varier à travers les contextes.</li>
+					</ul>
+					<p style="font-size: 0.5em;">Dans un monde ouvert où plusieurs classifications doivent être
+						combinées, le processus implique de créer des correspondances et des alignements entre
+						différents concepts et référents, garantissant la communication interdisciplinaire tout en
+						maintenant l'intégrité de chaque système de classification. Cela pourrait impliquer des efforts
+						de méta-classification ou d'interopérabilité sémantique.</p>
+				</section>
+				<section>
+					<p style="font-size: 0.8em;">Monde ouvert avec multiples classifications</p>
+					<img src="./img/MondeOuvertMultiplesClassifications.png"
+						alt="Monde Ouvert avec de multiples classifications" style="max-width: 40%; height: auto;" />
+
+				</section>
+				<section>
+					<p style="font-size: 0.8em;">Cartographie et alignement</p>
+					<img src="./img/CartographieAlignement.png" alt="Cartographie et alignement"
+						style="max-width: 40%; height: auto;" />
+					<ul style="font-size: 0.5em;">
+						<li>Cartographie ontologique: identifications des liens</li>
+						<li>Alignement ontologique: formalisation des équivalences et subsomptions </li>
+						<li>Intégration ontologique: plusieurs ontologies dans un cadre cohérent </li>
+					</ul>
+				</section>
+				<section>
+					<p style="font-size: 0.8em;">S'agit il toujours de classification ou de catégorisation?</p>
+					<img src="./img/EncoreCategorisationHarmonisation.png" alt="Cartographie et alignement"
+						style="max-width: 40%; height: auto;" />
+					<ul style="font-size: 0.4em;">
+						<li>Communication interdisciplinaire: compréhension entre domaines et disciplines</li>
+						<li>Cartographe des classes ou catégories: formalisation des liens logiques/sémantiques entres domaines et disciplines</li>
+						<li>Harmonisation: combinaisons harmonieuses</li>
+					</ul>
+				</section>
+				<section>
+					<p style="font-size: 0.8em;">Ou bien s'agit il encore d'autre chose?</p>
+					<img src="./img/AutreChose.png" alt="Cartographie et alignement"
+						style="max-width: 40%; height: auto;" />
+					<ul style="font-size: 0.4em;">
+						<li>Fédération ontologique: cadre pour harmoniser sans intégrer</li>
+						<li>Interopérability sémantique: capacité à échanger et comprendre malgré différecences de structure ou de sémantique</li>
+						<li>Meta classification: cadre de niveau supérieure</li>
+					</ul>
+				</section>
+				<section>
+					<p style="font-size: 0.8em;">Un monde ouvert avec de multiples classifications</p>
+					<img src="./img/MondeOuvertClassificationsMultiples.png" alt="Cartographie et alignement"
+						style="max-width: 40%; height: auto;" />
+						<br>
+					<ul style="font-size: 0.4em;">
+						<li>Conception ontologique: créer les mises en correspondance</li>
+						<li>Raisonneur ontologique: pouvoir utiliser des raisonneurs sémantique</li>
+						<li>Cader de méta-ontologie: developer des cadres</li>
+					</ul>
+				</section>	
+				<section>
+					<p style="font-size: 0.9em;">En conclusion</p>
+						<br>
+					<ul style="font-size: 0.7em;">
+						<li>Dans un scénario de monde ouvert, la combinaison de multiples classifications pour la communication interdisciplinaire va au-delà de la simple classification ou catégorisation.</li>
+						<li>Cela nécessite une approche qui intègre la cartographie ontologique, l'alignement et l'interopérabilité sémantique. </li>
+						<li>Ce processus peut être considéré comme une forme de méta-classification ou de fédération ontologique, qui fournit une manière structurée de permettre une compréhension interdisciplinaire tout en maintenant l'intégrité des systèmes de classification individuels.</li>
+					</ul>
+				</section>															
 			</section>
 			<section>
 				<h2>Intégrer la philosophie de l'action et le pragmatisme</h2>
