complétion slides des sous parties

--- a/SemanticEnterprise.html
+++ b/SemanticEnterprise.html
@@ -38,27 +38,33 @@
 			</section>
 
 			<section>
-				<h2>Les divers thèmes abordés</h2>
-				<ul style="font-size: 0.8em;">
+				<h2 style="font-size: 0.8em;">Les divers thèmes abordés</h2>
+				<ul style="font-size: 0.5em;">
 					<li><a href="#/2">Le triangle sémiotique en contexte</a></li>
 					<li><a href="#/3">Catégorisation et classification</a></li>
-					<li><a href="#/4">Intégrer la philosophie de l'action et le pragmatisme</a></li>
-					<li><a href="#/5">Capture de la sémantique et Interopérabilité Sémantique</a></li>
-					<li><a href="#/6">Prise en compte de la perception contextuelle</a></li>
-					<li><a href="#/7">La communication dans les entreprises digitales</a></li>
-					<li><a href="#/8">Illustration des langages formels standardisés avec ArchiMate et des protocoles
-							métiers</a></li>
-					<li><a href="#/9">Le rôle de la normalisation</a></li>
-					<li><a href="#/10">Lien avec la babélisation</a></li>
-					<li><a href="#/11">Urbaniser et modéliser l'entreprise</a></li>
-					<li><a href="#/12">Freins à l'urbanisation</a></li>
-					<li><a href="#/13">Incommunicabilité entre les acteurs</a></li>
+					<li><a href="#/4">Sémantique, Information et Connaissance</a></li>
+					<li><a href="#/5">Connotation, dénotation et perception contextuelle</a></li>
+					<li><a href="#/6">Intégrer philosophie de l'action, praxis et le pragmatisme</a></li>
+					<li><a href="#/7">Capture de la sémantique et Interopérabilité Sémantique</a></li>
+					<li><a href="#/8">Prise en compte de la perception contextuelle</a></li>
+					<li><a href="#/9">La communication dans les entreprises digitales</a></li>
+					<li><a href="#/10">A propos des ontologies</a></li>
+					<li><a href="#/11">Les ontologies dans le contexte du triange sémantique</a></li>
+					<li><a href="#/12">Illustration des langages formels standardisés avec ArchiMate et des protocoles métiers</a></li>
+					<li><a href="#/13">Le rôle de la normalisation</a></li>
+					<li><a href="#/14">Lien avec la babélisation</a></li>
+					<li><a href="#/15">Urbaniser et modéliser l'entreprise</a></li>
+					<li><a href="#/16">Freins à l'urbanisation</a></li>
+					<li><a href="#/17">Incommunicabilité entre les acteurs</a></li>
 				</ul>
 			</section>
 			<section>
 				<section>
-					<h2>Le triangle sémiotique en contexte</h2>
-					<p> Motivation: définir plus en détail ce qu’est la sémantique afin de la lier aux problématique de
+					<h2 style="font-size: 0.8em;">Le triangle sémiotique en contexte</h2>
+					<img src="./img/TriangleSemiotiqueContexte.png" alt="Catégorisation et Classification"
+						style="max-width: 40%; height: auto;" />
+					<p style="font-size: 0.6em;"> Motivation: définir plus en détail ce qu’est la sémantique afin de la
+						lier aux problématique de
 						l’interopérabilité et des standards informatiques </p>
 					<aside class="notes">
 						Ceci est une note privée que seul le présentateur peut voir.
@@ -204,7 +210,7 @@
 			</section>
 			<section>
 				<section>
-					<h2>Catégorisation et classification</h2>
+					<h2 style="font-size: 0.8em;">Catégorisation et classification</h2>
 					<img src="./img/CategorisationClassfication.png" alt="Catégorisation et Classification"
 						style="max-width: 50%; height: auto;" />
 				</section>
@@ -297,7 +303,8 @@
 						style="max-width: 40%; height: auto;" />
 					<ul style="font-size: 0.4em;">
 						<li>Communication interdisciplinaire: compréhension entre domaines et disciplines</li>
-						<li>Cartographe des classes ou catégories: formalisation des liens logiques/sémantiques entres domaines et disciplines</li>
+						<li>Cartographe des classes ou catégories: formalisation des liens logiques/sémantiques entres
+							domaines et disciplines</li>
 						<li>Harmonisation: combinaisons harmonieuses</li>
 					</ul>
 				</section>
@@ -307,7 +314,8 @@
 						style="max-width: 40%; height: auto;" />
 					<ul style="font-size: 0.4em;">
 						<li>Fédération ontologique: cadre pour harmoniser sans intégrer</li>
-						<li>Interopérability sémantique: capacité à échanger et comprendre malgré différecences de structure ou de sémantique</li>
+						<li>Interopérability sémantique: capacité à échanger et comprendre malgré différecences de
+							structure ou de sémantique</li>
 						<li>Meta classification: cadre de niveau supérieure</li>
 					</ul>
 				</section>
@@ -315,52 +323,126 @@
 					<p style="font-size: 0.8em;">Un monde ouvert avec de multiples classifications</p>
 					<img src="./img/MondeOuvertClassificationsMultiples.png" alt="Cartographie et alignement"
 						style="max-width: 40%; height: auto;" />
-						<br>
+					<br>
 					<ul style="font-size: 0.4em;">
 						<li>Conception ontologique: créer les mises en correspondance</li>
 						<li>Raisonneur ontologique: pouvoir utiliser des raisonneurs sémantique</li>
 						<li>Cader de méta-ontologie: developer des cadres</li>
 					</ul>
-				</section>	
+				</section>
 				<section>
 					<p style="font-size: 0.9em;">En conclusion</p>
-						<br>
+					<br>
 					<ul style="font-size: 0.7em;">
-						<li>Dans un scénario de monde ouvert, la combinaison de multiples classifications pour la communication interdisciplinaire va au-delà de la simple classification ou catégorisation.</li>
-						<li>Cela nécessite une approche qui intègre la cartographie ontologique, l'alignement et l'interopérabilité sémantique. </li>
-						<li>Ce processus peut être considéré comme une forme de méta-classification ou de fédération ontologique, qui fournit une manière structurée de permettre une compréhension interdisciplinaire tout en maintenant l'intégrité des systèmes de classification individuels.</li>
+						<li>Dans un scénario de monde ouvert, la combinaison de multiples classifications pour la
+							communication interdisciplinaire va au-delà de la simple classification ou catégorisation.
+						</li>
+						<li>Cela nécessite une approche qui intègre la cartographie ontologique, l'alignement et
+							l'interopérabilité sémantique. </li>
+						<li>Ce processus peut être considéré comme une forme de méta-classification ou de fédération
+							ontologique, qui fournit une manière structurée de permettre une compréhension
+							interdisciplinaire tout en maintenant l'intégrité des systèmes de classification
+							individuels.</li>
 					</ul>
-				</section>															
+				</section>
 			</section>
 			<section>
-				<h2>Intégrer la philosophie de l'action et le pragmatisme</h2>
+				<section>
+					<h2 style="font-size: 0.8em;">Sémantique, Information et Connaissance</h2>
+					<img src="./img/SemantiqueInformationConnaissance.png" alt="Catégorisation et Classification"
+						style="max-width: 50%; height: auto;" />
+				</section>
 			</section>
 			<section>
-				<h2>Capture de la sémantique et Interopérabilité Sémantique</h2>
+				<section>
+					<h2 style="font-size: 0.8em;">Connotation dénotation et perception contextuelle</h2>
+					<img src="./img/ConnotationDenotationPerceptionContextuelle.png"
+						alt="ConnotationDenotationPerceptionContextuelle" style="max-width: 110%; height: auto;" />
+				</section>
 			</section>
 			<section>
-				<h2>Prise en compte de la perception contextuelle</h2>
+				<section>
+					<h2 style="font-size: 0.8em;">Intégrer philosophie de l'action, praxis et pragmatisme</h2>
+					<img src="./img/ActionPraxisPragmatisme.png" alt="ActionPraxisPragmatisme"
+						style="max-width: 30%; height: auto;" />
+				</section>
 			</section>
 			<section>
-				<h2>La communication dans les entreprises digitales</h2>
+				<section>
+					<h2 style="font-size: 0.8em;">Capture de la sémantique et<br> Interopérabilité Sémantique</h2>
+					<img src="./img/Interoperability.webp" alt="Interoperability"
+						style="max-width: 50%; height: auto;" />
+				</section>
 			</section>
 			<section>
-				<h2>Illustration des langages formels standardisés avec ArchiMate et des protocoles métiers</h2>
+				<section>
+					<h2 style="font-size: 0.8em;">Prise en compte de la perception contextuelle</h2>
+					<img src="./img/PerceptionContextuelle.jpg" alt="Interoperability"
+						style="max-width: 50%; height: auto;" />
+				</section>
 			</section>
 			<section>
-				<h2>Le rôle de la normalisation</h2>
+				<section>
+					<h2 style="font-size: 0.8em;">La communication dans les entreprises digitales</h2>
+					<img src="./img/CommunicationEnteprisesDigitales.png" alt="CommunicationEntrepriseDigitales"
+						style="max-width: 50%; height: auto;" />
+				</section>
 			</section>
 			<section>
-				<h2>Lien avec la babélisation</h2>
+				<section>
+					<h2 style="font-size: 0.8em;">A propos des ontologies</h2>
+					<img src="./img/AProposDesOntologies.png" alt="AProposDesOntologies"
+						style="max-width: 50%; height: auto;" />
+				</section>
 			</section>
 			<section>
-				<h2>Urbaniser et modéliser l'entreprise</h2>
+				<section>
+					<h2 style="font-size: 0.8em;">Les ontologies dans le contexte du triangle sémantique</h2>
+					<img src="./img/OntologiesContexteTriangleSemantique.png" alt="AProposDesOntologies"
+						style="max-width: 50%; height: auto;" />
+				</section>
+			</section>			
+			<section>
+				<section>
+					<h2 style="font-size: 0.8em;">Illustration des langages formels standardisés avec ArchiMate et des
+						protocoles métiers</h2>
+					<img src="./img/archimate.webp" alt="archimate" style="max-width: 50%; height: auto;" />
+				</section>
 			</section>
 			<section>
-				<h2>Freins à l'urbanisation</h2>
+				<section>
+					<h2 style="font-size: 0.8em;">Le rôle de la normalisation</h2>
+					<img src="./img/RoleDesStandards.webp" alt="RoleDesStandards"
+						style="max-width: 30%; height: auto;" />
+				</section>
 			</section>
 			<section>
-				<h2>Incommunicabilité entre les acteurs</h2>
+				<section>
+					<h2 style="font-size: 0.8em;">Lien avec la babélisation</h2>
+					<img src="./img/LiensBabelisation.png" alt="LiensBabelisation"
+						style="max-width: 50%; height: auto;" />
+				</section>
+			</section>
+			<section>
+				<section>
+					<h2 style="font-size: 0.8em;">Urbaniser et modéliser l'entreprise</h2>
+					<img src="./img/UrbaniserModeliserEntreprises.png" alt="UrbaniserModeliserEntreprises"
+						style="max-width: 80%; height: auto;" />
+				</section>
+			</section>
+			<section>
+				<section>
+					<h2 style="font-size: 0.8em;">Freins à l'urbanisation</h2>
+					<img src="./img/FreinsUrbanisation.png" alt="FreinsUrbanisation"
+						style="max-width: 50%; height: auto;" />
+				</section>
+			</section>
+			<section>
+				<section>
+					<h2 style="font-size: 0.8em;">Incommunicabilité entre les acteurs</h2>
+					<img src="./img/IncommunicabiliteActeurs.png" alt="IncommunicabiliteActeurs"
+						style="max-width: 50%; height: auto;" />
+				</section>
 			</section>
 		</div>
 	</div>
